# streamlit-command-ghostwriter

./: .codeclimate.yml  .cz_config.js  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pyre_configuration  .safety-project.ini  .watchmanconfig  .yamllint.yml  LICENSE  README.md  app.py  codecov.yaml  command-ghostwriter.code-workspace  command_ghostwriter.code-workspace  commitlint.config.cjs  commitlog.txt  i11n.py  i18n.py  package-lock.json  package.json  poetry.toml  pyproject.toml  requirements.txt
.cursor/rules/: 001_directory-pattern.mdc  001_directory_pattern.mdc  002_domain.mdc  101_python-cofing.mdc  101_python-style.mdc  102_python-test.mdc  103_python-security.mdc  199_python-cleanup.mdc  199_python-style.mdc  301_github-actions.mdc  A-001_deployments.mdc  A-001_enuma-elish.mdc  B-002_domain.mdc  C-101_python-architect.mdc  C-102_python-test.mdc  C-103_python-security.mdc  C-199_python-style.mdc  D-101_localhost.mdc  D-201_gh-actions-standard.mdc  D-202_gh-actions-workflow.mdc  D-203-gh-actions-composite.mdc  github-actions.mdc  python-domain.mdc  python-security.mdc  python-style.mdc  python-test.mdc  python.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release.yml
.github/actions/: create-requirements.yml  upload-coverage.yml
.github/actions/build-stlite/: action.yml
.github/actions/convert-sarif-to-summary/: action.yml
.github/actions/create-pr-to-main/: action.yml
.github/actions/harden-runner/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-python-playwright/: action.yml
.github/actions/test-coverage/: action.yml
.github/actions/test-pyre/: action.yml
.github/actions/test-python-playwright/: action.yml
.github/codeql/: codeql-config.yml
.github/scripts/: check_version.py  create_pr.py
.github/scripts/tests/: test_check_version.py  test_create_pr.py
.github/scripts/workflow_tests/: __init__.py  test_check_version.py  test_create_pr.py
.github/workflows/: actionlint.yml  automerge-dependabot.yml  automerge_dependabot.yml  create-pr-to-main.yml  create-release-tag.yml  create-requirements.yml  develop_branch.yml  flake8.yml  main.yml  old_codeql.yml  release-to-streamlitcloud.yml  reusable-create-pr-to-main.yml  reusable-create-pr.yml  reusable-npm-cache.yml  reusable-pip-cache.yml  reusable-release.yml  reusable-setup-npm.yml  reusable-setup-pip.yml  reusable-test-and-build.yml  test-actionlint.yml  test-and-build-on-merged.yml  test-and-build-on-pr.yml  test-and-build-on-push.yml  test-and-build.yml  test-codeql.yml  test-coverage.yml  test-develop-branch.yml  test-pyre.yml  upload-coverage.yml
.streamlit/: config.toml
.zap/: rules.tsv
assets/docs/: commands.md
assets/examples/: cisco_config.toml  cisco_template.jinja2  dns_dig_config.csv  dns_dig_tmpl.j2  success_config.yaml  success_template.j2
dev/bench/: data.js
docs/: commands.md
features/: __init__.py  command_render.py  config_parser.py  core.py  document_render.py  text_transcoder.py  transcoder.py  validate_template.py  validate_uploaded_file.py
scripts/: check_version.py
taint/: .config  streamlit_app.pysa
tests/: conftest.py  test_app.py  test_app_integration.py  test_core.py  test_i11n.py  test_i18n.py  test_parser.py  test_render.py  test_transcoder.py
tests/e2e/: __init__.py  conftest.py  helpers.py  test_basic_ui.py  test_command_generation.py  test_config_debug.py  test_e2e.py  test_file_upload.py  test_other_tabs.py  test_streamlit.py  test_utils.py
tests/e2e/test_data/: dns_dig_config.csv  sample.txt  success_config.yaml
tests/test_data/: cisco_config.toml  cisco_template.jinja2  invalid_config.toml  invalid_duplicate_var.toml  invalid_template.j2  success_config.toml  success_config.yaml  success_template.j2
tests/unit/: test_app.py  test_config_parser.py  test_core.py  test_document_render.py  test_i18n.py  test_parser.py  test_parser_csv_options.py  test_parser_edge_cases.py  test_parser_init.py  test_parser_parse.py  test_render.py  test_transcoder.py
tests/workflow/: test_check_version.py  test_create_pr.py
