[build-system]
build-backend = "poetry.core.masonry.api"

requires = [
  "poetry-core",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
streamlit = "^1.35.0"
jinja2 = "^3.1.4"
pyyaml = "^6.0.1"
chardet = "^5.2.0"
python-box = "^7.2.0"
pydantic = "^2.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
types-toml = "^0.10.8.20240310"
pre-commit = "^3.7.1"
lizard = "^1.17.10"
poetry-types = "^0.5.1"
types-pyyaml = "^6.0.12.20240311"
pydeps = "^1.12.20"
pytest-playwright = "^0.5.0"
ruff = "^0.6.5"
pandas-stubs = "^2.2.2.240603"

[tool.ruff]
target-version = "py312"

line-length = 140
indent-width = 4
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
lint.select = [
  "A",
  "ANN",
  "B",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "S",
  "SLF",
  "TCH",
]
lint.ignore = [
]
lint.per-file-ignores."tests/*" = [
  "S101",
  "S102",
  "S103",
]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "ALL",
]
lint.unfixable = [
]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = "."
addopts = [
  "--import-mode=importlib",
]
markers = [
  "unit: mark a test as a unit test.",
  "integration: mark a test as an integration test.",
]

[tool.mypy]
check_untyped_defs = true
exclude = [
  ".venv",
  "build",
  "dist",
]
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
ignore_errors = true
ignore_missing_imports = true
pretty = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
